Fixed layout issues by adding xs class

--- a/assets/custom.css
+++ b/assets/custom.css
@@ -15,7 +15,6 @@
     margin-left: auto;
     margin-right: auto;
     width: 100%;
-    text-align: center;
 }
 
 .linksRow{
